[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This programme allow user to play five different games."
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "OPERATING SYSTEM :: POSIX :: LINUX",
  "OPERATING SYSTEM :: MICROSOFT :: WINDOWS",
  "FILTER	PROGRAMMING LANGUAGE :: PYTHON :: 3.8",
  "TOPIC :: GAMES/ENTERTAINMENT"
]
authors = ["AnyaMankova <ao.mankova@yandex.ru>"]
repository = "https://github.com/AnyaMankova/python-project-lvl1"
packages = [
  { include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
